# evtools

./: .gitignore  README.md  pyproject.toml
evtools/: __init__.py  combinations.py  constants.py  conversions.py  corrections.py  decision.py  display.py  dsvector.py  learning.py  mass.py  metrics.py
evtools/classifiers/: __init__.py  eknn.py
examples/: tutorial.ipynb  tutorial.py
tests/: test_combinations.py  test_conversions.py  test_corrections.py  test_decision.py  test_display.py  test_dsvector.py  test_eknn.py  test_learning.py  test_mass.py  test_metrics.py
