[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evtools"
version = "0.1.0"
description = "Evidence Theory Tools — utilities for Dempster-Shafer belief functions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]
keywords = [
    "belief functions",
    "Dempster-Shafer",
    "evidence theory",
    "mass function",
    "plausibility",
    "transferable belief model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/<your-username>/evtools"
Repository = "https://github.com/<your-username>/evtools"
Issues = "https://github.com/<your-username>/evtools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["evtools*"]
