[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evtools-dst"
version = "0.20.0"
description = "Evidence Theory Tools — belief functions, combination rules and contextual correction mechanisms for the Dempster-Shafer / Transferable Belief Model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]
keywords = [
    "belief functions",
    "Dempster-Shafer",
    "evidence theory",
    "mass function",
    "plausibility",
    "commonality",
    "implicability",
    "transferable belief model",
    "Fast Möbius Transform",
    "combination rules",
    "conjunctive rule",
    "disjunctive rule",
    "cautious rule",
    "discounting",
    "contextual discounting",
    "contextual reinforcement",
    "contextual correction",
    "de-discounting",
    "negating",
    "information fusion",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/daviddavkanmercier/evtools"
Repository = "https://github.com/daviddavkanmercier/evtools"
Issues = "https://github.com/daviddavkanmercier/evtools/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["evtools*"]
